Checkpoint 1 - cge232acd8

--- a/.knowledge/.knowledge.json
+++ b/.knowledge/.knowledge.json
@@ -1,5 +1,1 @@
-{
-  "knowledge_revision": 3,
-  "next_file_id": 2,
-  "git_revision": "2985af41254ad11d5faa84f8b1121fb8aebe60dd"
-}
+{"knowledge_revision": 3, "next_file_id": 2, "git_revision": "001be547e8ccd8c494508ab8678c9ee3f20b38aa"}
